Corrected spacing on <p> elements

--- a/console.css
+++ b/console.css
@@ -5,6 +5,10 @@ body {
   font-size: 16px;
 }
 
+p {
+  margin: 0 0 1px 0;
+}
+
 span {
   color: white;
 }
